fix: fix home List overflow

--- a/src/routes/Home/components/HomeContent.scss
+++ b/src/routes/Home/components/HomeContent.scss
@@ -11,7 +11,8 @@
 }
 
 .list {
-  max-width: 90%;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .item {
